--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,7 +85,7 @@ jobs:
 
   integration_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    # timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v20
